# pay-me-back

./: .env  .gitignore  Dockerfile  Makefile  PayMeBack.openapi.json  README.md  docker-compose.preprod.yml  docker-compose.yml  go.mod  go.sum  init_project.sh  main.py  pyproject.toml  run_tests.sh  stenella.openapi.json  validate_env.py
.agent/rules/: APITestingStrategy.md  LoginFunctionality.md  ProductRequirements.md  SystemSpecifications.md  requirements.md
.github/workflows/: test.yml
RequirementsAndFeatures/: ExpenseLifecycleAndFunctionality.md  Notifications.md  PreProduction_DeploymentPlan.md  ProductRequirements.md  UserManagementFunctionality.md  implementation_plan_Custom_Tiers.md  implementation_plan_DeploymentToPreProd.md  preprod_deployment_guide.md
alembic/: env.py  script.py.mako
alembic/versions/: 1c3176e57110_reset_db.py  3a1c6e414b93_add_useractivity_table.py  426d020bf1a0_add_emaildailylog.py  47d4a25c5d47_add_expense_models.py  58526d19487d_add_tier_field_to_user.py  69fe5e2aa1a6_create_notifications_table.py  a8f1c2d3e4f5_add_preferred_currency_and_usercontact.py  b0f9565ba203_reset_db.py  c7d2e8f9a1b3_add_currency_support.py  (+2 more)
app/: main.py
app/api/: deps.py
env/: .env.template  local.env  local_test.env  preprod.env  preprod.env.example  prod.env  staging.env  test.env
frontend/: Dockerfile  index.html  package-lock.json  package.json
remoteNginx/: nginx.conf
scripts/: create_admin.py  export_openapi.py  reset_db.py  reset_users.py
tests/: conftest.py  test_config_loading.py  test_init_db.py  test_security.py  test_tiers.py
(+95 files in other folders)
